kubernetes/qui/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: qui
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: qui
      app.kubernetes.io/name: qui
      app.kubernetes.io/instance: qui
  template:
    metadata:
      labels:
        app: qui
        app.kubernetes.io/name: qui
        app.kubernetes.io/instance: qui
    spec:
      containers:
      - name: qui
        image: ghcr.io/autobrr/qui:v1.30.0@sha256:1172ca40283330445d61189263a65a31ba703770a230b9e2a913f6e57bc2dd23
        ports:
        - containerPort: 7476
        - containerPort: 9074
          name: metrics
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: qui-config
      - name: downloads
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads
